--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,28 @@
 </head>
 <body>
     <header>
-        <h1>BERKSHIRE HATHAWAY INC.</h1>
-        <h3>3555 Farnam Street</h3>
-        <h3>Omaha, NE 68131</h3>
-        <h2>Official Home Page</h2>
+        <b>
+            <font size="6">B</font>
+            <font size="4">ERKSHIRE</font>
+            <font size="6">H</font>
+            <font size="4">ATHAWAY</font>
+            <font size="2">
+                INC.
+                <br>
+                3555 Farnam Street
+                <br>
+                Omaha, NE 68131
+            </font>
+            <br>
+            Official Home page
+        </b>
     </header>
+    <hr>
 
     <main>
         <div class="flex-container">
             <div>
-      ,           <ul>-
+                <ul>
                     <li><a href="https://berkshirehathaway.com/message.html">A Message from Warren E. Buffet</a></li>
                     <li><a href="https://berkshirehathaway.com/reports.html">Annual & Interim Reports</a></li>
                     <li><a href="http://www.sec.gov/cgi-bin/browse-edgar?company=berkshire+hathaway&match=&CIK=&filenum=&State=&Country=&SIC=&owner=exclude&Find=Find+Companies&action=getcompany">Link to SEC Filings</a></li>
@@ -57,7 +69,8 @@
     </main>
 
     <footer>
-        
+        <a href="https://berkshirehathaway.com/disclaimer.html">Legal Disclaimer</a>
+        <p>Copyright © 1978-2023 Berkshire Hathaway Inc.</p>
     </footer>
 </body>
 </html>
