Update Geico section and below

--- a/src/index.html
+++ b/src/index.html
@@ -57,17 +57,21 @@
         </div>
         <hr>
 
-        <div>
+        <div class="geico-section">
             <h1><a href="http://www.geico.com/">GEICO</a></h1>
-            <p>FOR A FREE CAR INSURANCE RATRE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY</p>
-            <p><a href="http://www.geico.com/">WWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY</p>
+            <font size="1">
+                <p>FOR A FREE CAR INSURANCE RATRE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY</p>
+                <a href="http://www.geico.com/">WWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY
+            </font>
         </div>
+        <hr>
 
         <div>
             <p>If you have any comments about our WEB page, you can write us at the address shown above.  However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
         </div>
 
     </main>
+    <hr>
 
     <footer>
         <a href="https://berkshirehathaway.com/disclaimer.html">Legal Disclaimer</a>
