Update styling to Geico section

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
         <hr>
 
         <div class="geico-section">
-            <h1><a href="http://www.geico.com/">GEICO</a></h1>
+            <a href="http://www.geico.com/"><img src="../assests/images/geicoimg.gif" alt="Geico image"></a>
             <font size="1">
                 <p>FOR A FREE CAR INSURANCE RATRE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY</p>
                 <a href="http://www.geico.com/">WWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY
