--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
         </div>
         <hr>
 
-        <div>
+        <div class="bottom-paragraph">
             <p>If you have any comments about our WEB page, you can write us at the address shown above.  However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
         </div>
 
@@ -74,8 +74,10 @@
     <hr>
 
     <footer>
-        <a href="https://berkshirehathaway.com/disclaimer.html">Legal Disclaimer</a>
-        <p>Copyright © 1978-2023 Berkshire Hathaway Inc.</p>
+        <div class="disclaimer-copyright">
+            <a href="https://berkshirehathaway.com/disclaimer.html">Legal Disclaimer</a>
+            <p>Copyright © 1978-2023 <strong>Berkshire Hathaway Inc.</strong></p>
+        </div>
     </footer>
 </body>
 </html>
