--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,13 @@
 
     <main>
         <div class="flex-container">
-            <div>
+            <div class="column-one">
                 <ul>
                     <li><a href="https://berkshirehathaway.com/message.html">A Message from Warren E. Buffet</a></li>
-                    <li><a href="https://berkshirehathaway.com/reports.html">Annual & Interim Reports</a></li>
+                    <li>
+                        <a href="https://berkshirehathaway.com/reports.html">Annual & Interim Reports</a>
+                        <p>Updated February 27, 2023</p>
+                    </li>
                     <li><a href="http://www.sec.gov/cgi-bin/browse-edgar?company=berkshire+hathaway&match=&CIK=&filenum=&State=&Country=&SIC=&owner=exclude&Find=Find+Companies&action=getcompany">Link to SEC Filings</a></li>
                     <li><a href="https://berkshirehathaway.com/SpecialLetters/WEBCTMLtr.html">Special Letters from Warren & Charlie RE:Past, Present and Future</a></li>
                     <li><a href="https://berkshirehathaway.com/subs/sublinks.html">Links to Berkshire Subsidiary Companies</a></li>
@@ -42,14 +45,26 @@
                 </ul>
             </div>
 
-            <div>
+            <div class="column-two">
                 <ul>
-                    <li><a href="https://berkshirehathaway.com/news/2023news.html">News Releases from Berkshire Hathaway and from Warren Buffett</a></li>
-                    <li><a href="https://berkshirehathaway.com/sharehold.html">Annual Meeting Information</a></li>
+                    <li>
+                        <a href="https://berkshirehathaway.com/news/2023news.html">News Releases from Berkshire Hathaway and from Warren Buffett<a>
+                        <p>Updated April 27, 2023</p>
+                    </li>
+                    <li>
+                        <a href="https://berkshirehathaway.com/sharehold.html">Annual Meeting Information</a>
+                        <p>Updated February 28, 2023</p>
+                    </li>
                     <li><a href="https://berkshirehathaway.com/bhenergy/bhenergypresentations.html">Berkshire Hathaway Energy Investor Presentations</a></li>
-                    <li><a href="https://berkshirehathaway.com/letters/letters.html">Warren Buffett's Letters to Berkshire Shareholders</a></li>
+                    <li>
+                        <a href="https://berkshirehathaway.com/letters/letters.html">Warren Buffett's Letters to Berkshire Shareholders</a>
+                        <p>Updated February 25, 2023</p>
+                    </li>
                     <li><a href="https://berkshirehathaway.com/wesco/WescoHome.html">Charlie Munger's Letters to Wesco Shareholders</a></li>
-                    <li><a href="https://www.ebay.com/itm/185106486239">Celebrating 50 Years of a Profitable Partnership</a></li>
+                    <li>
+                        <a href="https://www.ebay.com/itm/185106486239">Celebrating 50 Years of a Profitable Partnership</a>
+                        <p>(A commemorative book first sold at the 2015 Annual Meeting and now for sale on eBay.)</p>
+                    </li>
                     <li><a href="https://berkshirehathaway.com/brkshareholderinfo/brkshareholderinfo.html">Common Stock Information</a></li>
                     <li><a href="https://berkshirehathaway.com/activisionltr.pdf">Facts Regarding Berkshire's 2021 Investments in Activision Common Stock</a></li>
                 </ul>
